--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar">
   <div class="navbar-container">
-    <div class="logo"><a routerLink="/home">Artistes App</a></div>
+    <div class="logo"><a routerLink="/home"></a>
+      <a routerLink="/">{{ appName }}</a> </div>
     <ul class="nav-links">
       <li><a routerLink="/home" routerLinkActive="active">Accueil</a></li>
       <li><a routerLink="/artists" routerLinkActive="active">Artistes</a></li>
