--- a/src/app/modules/artist/components/artist-form/artist-form.component.html
+++ b/src/app/modules/artist/components/artist-form/artist-form.component.html
@@ -4,8 +4,8 @@
     <input id="name" formControlName="name" />
   </div>
   <div>
-    <label for="photoUrl">URL de la photo :</label>
-    <input id="photoUrl" formControlName="photoUrl" />
+    <label for="photo">URL de la photo :</label>
+    <input id="photo" formControlName="photo" />
   </div>
   <button type="submit">Ajouter</button>
 </form>
