--- a/src/app/modules/artist/components/artist-list/artist-list.component.html
+++ b/src/app/modules/artist/components/artist-list/artist-list.component.html
@@ -2,7 +2,7 @@
   <h1>Liste des Artistes</h1>
   <div class="artists-grid">
     <div *ngFor="let artist of artists" class="artist-card">
-      <img [src]="artist.photoUrl" [alt]="artist.name" />
+      <img [src]="artist.photo" [alt]="artist.name" />
       <h3>{{ artist.name }}</h3>
       <button (click)="deleteArtist(artist.id)">Supprimer</button>
     </div>
